--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vega": "^5.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=81&&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
